--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,16 @@ on:
   
 jobs:
   Trigger-Repos:
-  runs-on: ubuntu-latest
-- uses: convictional/trigger-workflow-and-wait@v1.3.0
-  with:
-    owner: OneTrueRelaxed
-    repo: dependant_repo
-    github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-    workflow_file_name: main.yml
-    wait_interval: 5
-    propagate_failure: true
-    trigger_workflow: true
-    wait_workflow: true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run action
+        uses: convictional/trigger-workflow-and-wait@v1.3.0
+        with:
+          owner: OneTrueRelaxed
+          repo: dependant_repo
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          workflow_file_name: main.yml
+          wait_interval: 5
+          propagate_failure: true
+          trigger_workflow: true
+          wait_workflow: true
