--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,15 @@ jobs:
           propagate_failure: true
           trigger_workflow: true
           wait_workflow: true
+
+      - name: Run action on another repo
+        uses: convictional/trigger-workflow-and-wait@v1.3.0
+        with:
+          owner: OneTrueRelaxed
+          repo: dependant_repo1
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          workflow_file_name: main.yml
+          wait_interval: 5
+          propagate_failure: true
+          trigger_workflow: true
+          wait_workflow: true
